--- a/Job Portal System/Areas/Resumes/Pages/Index.cshtml
+++ b/Job Portal System/Areas/Resumes/Pages/Index.cshtml
@@ -211,7 +211,9 @@
                                             {
                                                 <div class="mt-3">
                                                     <span class="d-block font-weight-little-bold">Description:</span>
-                                                    @Html.Raw(workExperience.Description)
+                                                    <div class="mt-2">
+                                                        @Html.Raw(workExperience.Description)
+                                                    </div>
                                                 </div>
                                             }
                                         }
@@ -224,7 +226,9 @@
                                             {
                                                 <div class="mt-3">
                                                     <span class="d-block font-weight-little-bold">Description:</span>
-                                                    @Html.Raw(workExperience.Description)
+                                                    <div class="mt-2">
+                                                        @Html.Raw(workExperience.Description)
+                                                    </div>
                                                 </div>
                                             }
                                             <div class="d-flex mt-4 pl-2 pr-2">
