--- a/Job Portal System/wwwroot/css/site.css
+++ b/Job Portal System/wwwroot/css/site.css
@@ -246,7 +246,6 @@ body {
     font-size: 0.9em;
     color: gray;
     margin-left: auto;
-    vertical-align: center;
     align-self: flex-end;
 }
 
@@ -382,6 +381,10 @@ a.no-hover-anchor:hover {
 
 .font-weight-little-bold {
     font-weight: 600;
+}
+
+.bg-form-background {
+    background-color: var(--form-background)
 }
 
 .bg-ghostwhite-hover:hover {
